--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="black">
     <section class="box1">
     <div>
-        <img src="Screenshot (5).png" width="60%" height="750px" >
+        <img src="Screenshot (5).png" width="55%" height="750px" >
     </div>
     </section>
     <section class="box2">
@@ -33,7 +33,15 @@
     <div>
       <button class="box6">Log in </button> 
     </div>
-    </section>
+        </section>
+        <section class="box9" >
+      <div>
+          <pre>        About  Helpcentre  Terms of Services  Privacy Policy  Cookies Policy  Ads info  Blog  Status  Careers  Brand Resoures  Advertising  Marketing  Twitter for Resoures  Developers  Directory  Settings
+               </pre>
+          <pre>                                                                                   &2021 Twitter,inc.</pre>
+      </div> 
+      </section> 
+
     </section>
 
     
